[package]
name = "bearer"
version = "0.2.0"
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
readme = "README.md"
keywords = ["OAuth2"]
categories = ["authentication", "command-line-interface"]
description = "command line utility to generate Authorization HTTP header"
license = "BSD-3-Clause"
documentation = "https://docs.rs/bearer"
#homepage = "https://github.com/mardiros/bearer"
repository = "https://github.com/mardiros/bearer"

[dependencies]

libc = "^0.2.21"
clap = "^2.21.1"
log = "^0.3.7"
pretty_env_logger = "^0.1.0"
tilde-expand = "^0.1.1"
chrono = "^0.3.0"

toml = "^0.3.1"
serde = "^0.9.11"
serde_derive = "^0.9.11"
serde_json = "^0.9.9"

url = "^1.4.0"
curl = "^0.4.6"

[dev-dependencies]
rand = "^0.3.15"